<resources>
    <string name="app_name">RehabEase</string>
    <string name="rehabease">RehabEase</string>
    <string name="getting_started">Getting started</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="welcome_onboard">Welcome onboard!</string>
    <string name="enter_your_mail">Enter your mail</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in!</string>
    <string name="register">Register</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Log in</string>
    <string name="error_msg_mail">The mail is empty!</string>
    <string name="error_msg_name">The name is empty!</string>
    <string name="error_msg_name_has_numbers">The name must not have numbers!</string>
    <string name="error_msg_password">The password is empty!</string>
    <string name="error_msg_confirm_password">Confirm your password!</string>
    <string name="error_msg_not_the_same_password">Passwords are not the same!</string>
    <string name="error_msg_password_not_strong">The password is too weak! Must have minimum of 8 characters, including an uppercase letter, a lowercase letter, a number and a special character.</string>
    <string name="login_success">You logged in successfully!</string>
    <string name="p_ssw0rd">P@ssw0rd</string>
    <string name="admin_gmail_com">admin@gmail.com</string>
    <string name="treatment_details">Treatment details</string>
    <string name="your_activity">Your activity</string>
    <string name="adjust_exercise">Adjust exercise</string>
    <string name="tip_of_the_day">Tip of the day!</string>
    <string name="tip_of_the_day_loading">Loading Tip of the Day...</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_nulla_dolor_nunc_tincidunt_vel_auctor_eu_suscipit_et_libero_etiam_venenatis_elementum_ipsum_vitae_volutpat_erat_mattis_in_etiam_a_velit_lacinia_lobortis_neque_vel_posuere_velit_quisque_auctor_tellus_libero_a_ornare_tortor_rhoncus_a_phasellus_eget_volutpat_mauris_suspendisse_hendrerit_quam_maximus_nisi_rutrum_pellentesque_etiam_malesuada_libero_eget_aliquet_efficitur_integer_mattis_venenatis_odio_etiam_neque_ipsum_blandit_vitae_velit_egestas_imperdiet_dictum_mi_ut_consectetur_ut_tellus_vel_efficitur">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla dolor nunc, tincidunt vel auctor eu, suscipit et libero. Etiam venenatis elementum ipsum, vitae volutpat erat mattis in. Etiam a velit lacinia, lobortis neque vel, posuere velit. Quisque auctor tellus libero, a ornare tortor rhoncus a. Phasellus eget volutpat mauris. Suspendisse hendrerit quam maximus nisi rutrum pellentesque. Etiam malesuada libero eget aliquet efficitur. Integer mattis venenatis odio. Etiam neque ipsum, blandit vitae velit egestas, imperdiet dictum mi. Ut consectetur ut tellus vel efficitur.</string>
    <string name="how_do_you_rate_it">How would you rate it?</string>
    <string name="bad">Bad</string>
    <string name="decent">Decent</string>
    <string name="good">Good</string>
    <string name="your_injury">Your injury</string>
    <string name="age">Age</string>
    <string name="calculate_recovery_time">Calculate recovery time</string>
    <string name="autocompletetextview">AutoCompleteTextView</string>
    <string name="your_age">Your age</string>
    <string name="home">Home</string>
    <string name="training_evaluation">Training evaluation</string>
    <string name="treatment_time_loading">Loading rehabilitation time estimate...</string>
    <string name="wishing_you_fast_recovery">Wishing you fast recovery!</string>
    <string name="choose_your_injury">Choose your injury</string>
    <string name="share_your_training">Share your training</string>
    <string name="plot_your_activity">Plot your activity</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_nulla_dolor_nunc_tincidunt_vel_auctor_eu_suscipit_et_libero_etiam_venenatis_elementum_ipsum_vitae_volutpat_erat_mattis_in">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla dolor nunc, tincidunt vel auctor eu, suscipit et libero. Etiam venenatis elementum ipsum, vitae volutpat erat mattis in.</string>
    <string name="choose_your_training">Choose your training</string>
    <string name="enter_date_of_the_training">Date</string>
    <string name="enter_duration_of_the_training">Duration</string>
    <string name="submit">Submit</string>
    <string name="select_duration">Select duration</string>
    <string name="you_ve_been_using_rehabease_for_x_days_in_a_row">You\'ve been using RehabEase for %d days in a row!</string>
    <string name="you_ve_been_using_rehabease_for_1_day">You\'ve been using RehabEase for %d day!</string>
    <string name="a">A+</string>
    <string name="_23_06_2024">23/06/2024</string>
    <string name="_30_minutes">30 minutes</string>
    <string name="grading_system">A – rating for a training in the US scale.</string>
    <string name="thank_you_for_your_feedback">Thank you for your feedback!</string>
    <string name="already_rated_message">Tip already rated today!</string>
</resources>