<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".both.LoginActivity">

    <TextView
        android:id="@+id/welcome_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/markazi_text_bold"
        android:text="@string/welcome_back"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/login_image"
        android:layout_width="109dp"
        android:layout_height="248dp"
        android:layout_marginTop="-30dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="149dp"
        tools:ignore="MissingConstraints"
        app:srcCompat="@drawable/img_login" />


    <EditText
        android:id="@+id/login_email"
        android:layout_width="294dp"
        android:layout_height="51dp"
        android:autofillHints=""
        android:background="@drawable/bg_rounded_corner"
        android:ems="10"
        android:fontFamily="@font/markazi_text_bold"
        android:hint="@string/enter_your_mail"
        android:text="@string/admin_gmail_com"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/simpleTextColor"
        android:textColorHint="@color/textEditColor"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="149dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="294dp"
        android:layout_height="51dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:inputType="textPassword"
        android:background="@drawable/bg_rounded_corner"
        android:ems="10"
        android:fontFamily="@font/markazi_text_bold"
        android:text="@string/p_ssw0rd"
        android:hint="@string/enter_your_password"
        android:textAlignment="center"
        android:textColor="@color/simpleTextColor"
        android:textColorHint="@color/textEditColor"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="219dp" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/forgot_password"
        android:fontFamily="@font/markazi_text_bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginBottom="10dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintVertical_bias="0.112" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="260dp"
        android:layout_height="71dp"
        android:layout_gravity="center"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/log_in"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/don_t_have_an_account_sign_up"
        android:fontFamily="@font/markazi_text_bold"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintVertical_bias="0.112" />
</LinearLayout>