<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/welcome_onboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:fontFamily="@font/markazi_text_bold"
        android:text="@string/welcome_onboard"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/register_name"
        android:layout_width="294dp"
        android:layout_height="51dp"
        android:autofillHints=""
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:fontFamily="@font/markazi_text_bold"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/simpleTextColor"
        android:textColorHint="@color/textEditColor"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="290dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="294dp"
        android:layout_height="51dp"
        android:autofillHints=""
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:fontFamily="@font/markazi_text_bold"
        android:hint="@string/enter_your_mail"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/simpleTextColor"
        android:textColorHint="@color/textEditColor"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="149dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="294dp"
        android:layout_height="51dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:inputType="textPassword"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:fontFamily="@font/markazi_text_bold"
        android:hint="@string/enter_your_password"
        android:textAlignment="center"
        android:textColor="@color/simpleTextColor"
        android:textColorHint="@color/textEditColor"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="219dp" />

    <EditText
        android:id="@+id/register_confirm_password"
        android:layout_width="294dp"
        android:layout_height="51dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:fontFamily="@font/markazi_text_bold"
        android:hint="Confirm your password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/simpleTextColor"
        android:textColorHint="@color/textEditColor"
        android:textSize="24sp"
        android:layout_marginBottom="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="434dp" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="260dp"
        android:layout_height="71dp"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        android:text="@string/register"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/already_have_an_account_sign_in"
        android:fontFamily="@font/markazi_text_bold"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintVertical_bias="0.112" />

</LinearLayout>