<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".TipActivity">

    <ImageView
        android:id="@+id/orange_rect"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:importantForAccessibility="no"
        android:src="@drawable/orange_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/markazi_text_bold"
        android:gravity="center"
        android:text="@string/rehabease"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@+id/orange_rect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/orange_rect" />

    <ImageView
        android:id="@+id/image_bars"
        android:layout_width="31dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        app:layout_constraintBottom_toTopOf="@+id/orange_rect"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/bars_solid" />

    <ImageView
        android:id="@+id/rectimage"
        android:layout_width="409dp"
        android:layout_height="80dp"
        android:src="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orange_rect"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/markazi_text_bold"
        android:text="@string/tip_of_the_day"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/rectimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rectimage"
        app:layout_constraintVertical_bias="0.666" />

    <TextView
        android:id="@+id/text_do_you_know"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/markazi_text_medium"
        android:text="Do you know that..."
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectimage" />

    <TextView
        android:id="@+id/tip_text"
        android:layout_width="288dp"
        android:layout_height="296dp"
        android:hint="@string/tip_of_the_day_loading"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_do_you_know"
        app:layout_constraintVertical_bias="0.094" />

    <TextView
        android:id="@+id/feedback_ask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/markazi_text_medium"
        android:text="@string/how_do_you_rate_it"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tip_text"
        app:layout_constraintVertical_bias="0.122" />

    <Button
        android:id="@+id/bad"
        android:layout_width="90dp"
        android:layout_height="49dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/feedback_button"
        android:backgroundTint="@color/rate_bad"
        android:fontFamily="@font/markazi_text_medium"
        android:text="@string/bad"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/decent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedback_ask"
        app:layout_constraintVertical_bias="0.031" />

    <Button
        android:id="@+id/decent"
        android:layout_width="90dp"
        android:layout_height="49dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/feedback_button"
        android:backgroundTint="@color/rate_decent"
        android:fontFamily="@font/markazi_text_medium"
        android:text="@string/decent"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedback_ask"
        app:layout_constraintVertical_bias="0.031" />

    <Button
        android:id="@+id/good"
        android:layout_width="90dp"
        android:layout_height="49dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="38dp"
        android:background="@drawable/feedback_button"
        android:backgroundTint="@color/rate_good"
        android:fontFamily="@font/markazi_text_medium"
        android:text="@string/good"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/decent"
        app:layout_constraintTop_toBottomOf="@+id/feedback_ask"
        app:layout_constraintVertical_bias="0.031" />


</androidx.constraintlayout.widget.ConstraintLayout>