<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".ShareYourTrainingActivity">

    <ImageView
        android:id="@+id/orange_rect"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:importantForAccessibility="no"
        android:src="@drawable/orange_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/rehab_ease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/markazi_text_bold"
        android:gravity="center"
        android:text="@string/rehabease"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@+id/orange_rect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/orange_rect" />

    <ImageView
        android:id="@+id/image_bars"
        android:layout_width="31dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        app:layout_constraintBottom_toTopOf="@+id/orange_rect"
        app:layout_constraintEnd_toStartOf="@+id/rehab_ease"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/bars_solid" />

    <ImageView
        android:id="@+id/rectimage"
        android:layout_width="409dp"
        android:layout_height="80dp"
        android:src="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orange_rect"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/markazi_text_bold"
        android:text="@string/your_activity"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/rectimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rectimage"
        app:layout_constraintVertical_bias="0.666" />

    <TextView
        android:id="@+id/share_your_training_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/markazi_text_medium"
        android:text="Share your training"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectimage"
        app:layout_constraintVertical_bias="0.04" />

    <com.application.customization.CustomSpinner
        android:id="@+id/trainings"
        android:layout_width="278dp"
        android:layout_height="62dp"
        android:layout_marginBottom="400dp"
        android:background="@drawable/spinner_bg_arrow_down"
        android:dropDownVerticalOffset="70dp"
        android:hint="@string/choose_your_training"
        android:popupBackground="@color/white"
        android:textColorHint="@color/textEditColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/share_your_training_text"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/date_of_training_input"
        android:layout_width="278dp"
        android:layout_height="62dp"
        android:background="@drawable/rounded_rectangle"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/enter_date_of_the_training"
        android:clickable="true"
        android:focusable="false"
        android:inputType="none"
        android:fontFamily="@font/markazi_text_bold"
        android:textColor="@color/simpleTextColor"
        android:textColorHint="@color/textEditColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trainings"
        app:layout_constraintVertical_bias="0.088" />

    <EditText
        android:id="@+id/duration_of_training_input"
        android:layout_width="278dp"
        android:layout_height="62dp"
        android:background="@drawable/rounded_rectangle"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/enter_duration_of_the_training"
        android:clickable="true"
        android:focusable="false"
        android:inputType="none"
        android:fontFamily="@font/markazi_text_bold"
        android:textColor="@color/simpleTextColor"
        android:textColorHint="@color/textEditColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_of_training_input"
        app:layout_constraintVertical_bias="0.088" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="277dp"
        android:layout_height="84dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/submit"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/duration_of_training_input"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>